--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                                         <color key="textColor" red="0.67889085442128816" green="0.0" blue="0.012586632099438739" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="user2@trafie.com" placeholder="Email" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="whE-BS-ZcV">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="user@trafie.com" placeholder="Email" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="whE-BS-ZcV">
                                         <rect key="frame" x="9" y="145" width="359" height="40"/>
                                         <animations/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -157,6 +157,9 @@
                             <constraint firstItem="fgO-Zb-eXI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="v7L-RQ-sj9"/>
                         </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="emailTextField" destination="whE-BS-ZcV" id="6pJ-d2-DNH"/>
@@ -358,6 +361,7 @@
                             <constraint firstItem="QiO-gG-uFp" firstAttribute="trailing" secondItem="r7c-zQ-WFC" secondAttribute="trailing" id="pax-QQ-WbL"/>
                         </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="emailField" destination="5wK-Ek-YlE" id="ig5-Fh-yzK"/>
@@ -489,8 +493,8 @@
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" enablesReturnKeyAutomatically="YES"/>
                                                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                                 </textView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0J-9n-ZoY">
-                                                    <rect key="frame" x="734" y="115" width="34" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0J-9n-ZoY">
+                                                    <rect key="frame" x="734" y="132" width="34" height="0.0"/>
                                                     <animations/>
                                                     <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.9022434735" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
@@ -744,7 +748,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INr-r0-iUG">
-                                                    <rect key="frame" x="152" y="16" width="42" height="21"/>
+                                                    <rect key="frame" x="152" y="15" width="42" height="21"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -754,34 +758,23 @@
                                             <animations/>
                                             <constraints>
                                                 <constraint firstItem="re4-QN-cUN" firstAttribute="top" secondItem="dYc-sd-Ui0" secondAttribute="bottom" constant="8" id="265-dC-q25"/>
-                                                <constraint firstItem="r63-DZ-5hZ" firstAttribute="top" secondItem="INr-r0-iUG" secondAttribute="bottom" constant="8" id="7N1-le-koQ"/>
                                                 <constraint firstItem="kre-pr-83J" firstAttribute="bottom" secondItem="dYc-sd-Ui0" secondAttribute="bottom" id="9KK-pv-dpO"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="re4-QN-cUN" secondAttribute="bottom" id="9n3-JO-aQB"/>
                                                 <constraint firstAttribute="topMargin" secondItem="Qxa-fS-G90" secondAttribute="top" id="DoT-AK-7K1"/>
                                                 <constraint firstItem="dYc-sd-Ui0" firstAttribute="leading" secondItem="oj1-C8-sUO" secondAttribute="leadingMargin" id="FhQ-a0-TN4"/>
-                                                <constraint firstItem="kre-pr-83J" firstAttribute="top" secondItem="r63-DZ-5hZ" secondAttribute="bottom" constant="8" id="K3J-xv-G3s"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="r63-DZ-5hZ" secondAttribute="trailing" id="Ob4-hB-Bfj"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Qxa-fS-G90" secondAttribute="trailing" id="Rti-F2-ryO"/>
                                                 <constraint firstItem="KKP-cE-Ekf" firstAttribute="top" secondItem="oj1-C8-sUO" secondAttribute="topMargin" id="d9Y-xh-MtK"/>
-                                                <constraint firstItem="Qxa-fS-G90" firstAttribute="top" secondItem="oj1-C8-sUO" secondAttribute="topMargin" id="fSh-tx-IL0"/>
                                                 <constraint firstItem="INr-r0-iUG" firstAttribute="leading" secondItem="KKP-cE-Ekf" secondAttribute="trailing" constant="8" id="goE-kq-Ewp"/>
                                                 <constraint firstItem="r63-DZ-5hZ" firstAttribute="top" secondItem="KKP-cE-Ekf" secondAttribute="bottom" constant="8" id="hXa-hG-oxB"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="r63-DZ-5hZ" secondAttribute="leading" id="jix-dM-UgM"/>
-                                                <constraint firstItem="Qxa-fS-G90" firstAttribute="trailing" secondItem="oj1-C8-sUO" secondAttribute="trailingMargin" id="kFu-8f-VxD"/>
                                                 <constraint firstItem="re4-QN-cUN" firstAttribute="trailing" secondItem="oj1-C8-sUO" secondAttribute="trailingMargin" id="lgR-8w-JOH"/>
+                                                <constraint firstItem="INr-r0-iUG" firstAttribute="baseline" secondItem="KKP-cE-Ekf" secondAttribute="baseline" id="ms4-Ri-HBW"/>
                                                 <constraint firstItem="dYc-sd-Ui0" firstAttribute="top" secondItem="r63-DZ-5hZ" secondAttribute="bottom" constant="8" id="nwh-NM-MFb"/>
                                                 <constraint firstItem="kre-pr-83J" firstAttribute="leading" secondItem="dYc-sd-Ui0" secondAttribute="trailing" constant="8" id="obK-uw-Du3"/>
                                                 <constraint firstItem="KKP-cE-Ekf" firstAttribute="leading" secondItem="oj1-C8-sUO" secondAttribute="leadingMargin" id="vyT-fH-P4g"/>
                                                 <constraint firstItem="re4-QN-cUN" firstAttribute="leading" secondItem="oj1-C8-sUO" secondAttribute="leadingMargin" id="ycQ-U2-UaT"/>
-                                                <constraint firstItem="Qxa-fS-G90" firstAttribute="top" secondItem="re4-QN-cUN" secondAttribute="bottom" constant="8" id="zga-Gh-cPP"/>
                                             </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="fSh-tx-IL0"/>
-                                                    <exclude reference="kFu-8f-VxD"/>
-                                                    <exclude reference="zga-Gh-cPP"/>
-                                                </mask>
-                                            </variation>
                                         </tableViewCellContentView>
                                         <animations/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -916,7 +909,7 @@
         <!--ActivitiesNavigationController-->
         <scene sceneID="KiK-kw-NLx">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBarsWhenKeyboardAppears="YES" id="HIG-KF-SDB" userLabel="ActivitiesNavigationController" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="activitiesNavigationController" automaticallyAdjustsScrollViewInsets="NO" hidesBarsWhenKeyboardAppears="YES" id="HIG-KF-SDB" userLabel="ActivitiesNavigationController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Activities" image="ic_format_list_bulleted" id="MdS-Es-h7n" userLabel="Actitivies"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hrX-Uh-iKy">
@@ -1525,4 +1518,5 @@
         <image name="ic_face" width="24" height="24"/>
         <image name="ic_format_list_bulleted" width="24" height="24"/>
     </resources>
+    <color key="tintColor" red="0.80784313730000001" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
